finished hamburger menu

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <h1 align="center">The Dialect</h1>
         <div class="navbar" align="center">
             <hr class="bighr">
-            <a>POLITICS</a>
+            <a href="#">POLITICS</a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a>SUBJECT2</a>
+            <a href="#">SUBJECT2</a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a>SUBJECT3</a>
+            <a href="#">SUBJECT3</a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a>SUBJECT4</a>
+            <a href="#">SUBJECT4</a>
             &nbsp;
             <hr>
         </div>
